Fix task/deadline container code to fill width on mobile.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -125,8 +125,6 @@
     }
 
     .index .index-taskdeadline-container > div {
-    }
-
-    .index .index-taskdeadline-container li {
+        width: calc(100% - 2em);
     }
 }
